<resources>
    <string name="app_name">Stream Client</string>
    <string name="write_your_nickname">Write your nickname</string>
    <string name="hi_human">Hi Human!</string>
    <string name="register">Register</string>
    <string name="write_your_tweet_here">Write your tweet here...</string>
    <string name="send">Send</string>
    <string name="lorem_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt
    </string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>

    <string name="credit">Made with 🏋🎸🖥 at Aguascalientes, Mexico \n(#iambedoy #codeandmusic)</string>
    <string name="hello_world">Hello world</string>
    <string name="write_a_message">Write a message...</string>
</resources>
