<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


    <Button android:layout_width="wrap_content"
            android:text="@string/like"
            android:layout_weight="1"
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:id="@+id/post_option_like"
            android:background="@color/white"
            android:layout_height="wrap_content"/>


    <Button android:layout_width="wrap_content"
            android:text="@string/comment"
            android:layout_weight="1"
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:id="@+id/post_option_comment"
            android:background="@color/white"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="wrap_content"
            android:text="@string/share"
            android:layout_weight="1"
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:id="@+id/post_option_share"
            android:background="@color/white"
            android:layout_height="wrap_content"/>

</LinearLayout>