<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:background="@color/backgroundColor"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/rounded_drawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:textSize="24sp"
                android:padding="@dimen/common_padding"
                android:text="@string/hi_human"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_view"
                android:fontFamily="sans-serif-black"/>
        <EditText
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:padding="@dimen/common_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="@string/write_your_nickname"
                android:ems="10"
                android:id="@+id/nickname_field"/>
        <Button
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/register"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/action_login"/>


    </LinearLayout>

</LinearLayout>